--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link
                 rel="stylesheet"
                 type="text/css"
-                href="./index.css"
+                href="css/index.css"
         >
     </head>
     <body>
@@ -22,7 +22,7 @@
                     CLICKER!
                 </h3>
                 <button class="btn-header">
-                    <img class="btn-header-img" src="../icons/btn-reset.svg">
+                    <img class="btn-header-img" src="icons/btn-reset.svg">
                     RESET
                 </button>
             </div>
@@ -53,9 +53,9 @@
             </div>
         </div>
     </body>
-    <script type="module" src="../index.js"></script>
+    <script type="module" src="script/index.js"></script>
     <script type="module">
-        import runApp from '../index.js';
+        import runApp from './script';
         runApp();
     </script>
 </html>
