--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             </div>
         </div>
     </body>
-    <script type="module" src="script/index.js"></script>
+    <script type="module" src="index.js"></script>
     <script type="module">
-        import runApp from './script';
+        import runApp from './index.js';
         runApp();
     </script>
 </html>
